Fixed cv-section is not align center

--- a/less/style.less
+++ b/less/style.less
@@ -87,7 +87,7 @@ a {
   .clearfix();
 
   @media (min-width: @screen-md-min) {
-    width: @section-width;
+    
   }
 
   &-fullw {
